k8s/infra/auth/oauth2-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
      namespace: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy
          imagePullPolicy: IfNotPresent
          args:
            # - --http-address=http://:4180
            # - --upstream=file:///dev/null
            # - --provider=keycloak-oidc
            # - --proxy-prefix=/oauth2
            # - --redirect-url=/oauth2/callback
            # - --oidc-issuer-url=https://auth.emisia.net/realms/emisia
            # - --email-domain=* # Validate email domain for users, see option documentation
            # - --code-challenge-method=S256 # PKCE        
            # - --cookie-secret=cfsftHakFx0jmWjmKKSD73GsWi9uxOeFd9psk8ns8dg=
            # - --cookie-secure=true
            # - --cookie-name=_oauth2_proxy
            # - --cookie-expire=24h
            # - --set-xauthrequest=true
            # - --pass-user-headers=true
            # - --pass-access-token=true
            # - --pass-authorization-header=true
            - --provider=keycloak-oidc
            - --cookie-domain="echo.emisia.net"
            - --email-domain=*
            - --http-address=0.0.0.0:4180
            - --oidc-issuer-url=https://auth.emisia.net/realms/emisia
            - --whitelist-domain=.echo.emisia.net
            - --skip-provider-button=true
            - --upstream=file:///dev/null
            - --session-cookie-minimal=true          
          ports:
            - containerPort: 4180
              protocol: TCP
